# a2_ros

./: .dockerignore  .gitignore  .gitmodules  README.md  a2.sh  compose.pc2.yaml  compose.vnc.yml  compose.yaml  entrypoint.sh  frames_2026-06-03_02.00.04.gv  frames_2026-06-03_02.02.35.gv  frames_2026-06-23_07.04.41.gv  install.sh
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yaml
a2_ros/launch/: navigation.launch.py  sim.launch.py
config/record/: nav.yaml  newname.yaml
docker/: Dockerfile.dev
environment/: Dockerfile.base  Dockerfile.dev
environment/colcon/: pc2.defaults.yaml  robot.defaults.yaml  sim.defaults.yaml
environment/shell/: .bashrc  .tmux.conf
environment/vnc/: kasmvnc.yaml  setup-kasmvnc.sh  xstartup
scripts/: a2  a2_shell.sh  build_workspace.sh  clean_workspace.sh  entrypoint.sh  record.sh  setup.sh  setup_jetson.sh
scripts/local/: install.sh  setup.sh
src/control/a2_orchestrator/a2_orchestrator/: velocity_publisher.py
src/control/a2_sport_controller/: CMakeLists.txt  package.xml
src/control/a2_sport_controller/include/: a2_sport_client.hpp  ros2_sport_client.hpp
src/control/a2_sport_controller/launch/: locomotion_executor.launch.py
src/control/a2_sport_controller/src/: a2_sport_client.cpp  mode_fsm.cpp  ros2_sport_client.cpp
src/core/a2_deployment_config/config/: cyclonedds.xml
src/core/a2_deployment_config/config/cyclonedds/: cyclonedds.robot.xml
src/core/a2_utils/: CMakeLists.txt  package.xml
src/meta_packages/a2_nav/: CMakeLists.txt  package.xml
src/meta_packages/a2_object_detection/: CMakeLists.txt  package.xml
src/meta_packages/a2_pc2/: CMakeLists.txt  package.xml
src/meta_packages/a2_pc2/launch/: camera.launch.py  pc2.launch.py
src/meta_packages/a2_pc2/src/: teleop_joy.cpp
src/meta_packages/a2_robot/: CMakeLists.txt  package.xml
src/meta_packages/a2_ros/: CMakeLists.txt
src/meta_packages/a2_ros/config/autonomy/: matterport.yaml  tare_a2.yaml
src/meta_packages/a2_ros/config/dlio/: params_a2.yaml
src/meta_packages/a2_ros/launch/: dlio.launch.py  exploration.launch.py  navigation.launch.py  pc2.launch.py  real.launch.py  resple.launch.py  sim.launch.py
src/meta_packages/a2_ros/src/: nav_vel_relay.cpp  scripted_walk.cpp
src/meta_packages/a2_sim/: CMakeLists.txt  package.xml
src/meta_packages/a2_sim_full/: CMakeLists.txt  package.xml
src/meta_packages/a2_state_estimation/: CMakeLists.txt  package.xml
